--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "gatsby": "^3.5.0",
     "gatsby-image": "^3.5.0",
+    "gatsby-plugin-google-gtag": "^3.5.0",
     "gatsby-plugin-manifest": "^3.5.0",
     "gatsby-plugin-offline": "^4.5.0",
     "gatsby-plugin-react-helmet": "^4.5.0",
